// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search calls search with clickAnalytics 1`] = `
Array [
  Array [
    Array [
      Object {
        "indexName": "blog",
        "params": Object {
          "clickAnalytics": true,
          "highlightPostTag": "</mark>",
          "highlightPreTag": "<mark>",
          "optionalFilters": Array [
            Array [
              "platforms:sentry.javascript.react",
            ],
            "legacy:0",
          ],
          "snippetEllipsisText": "…",
        },
        "query": "react",
      },
    ],
  ],
]
`;

exports[`Search calls transformer with response 1`] = `
Object {
  "exhaustiveNbHits": true,
  "hits": Array [
    Object {
      "_highlightResult": Object {
        "excerpt": Object {
          "fullyHighlighted": false,
          "matchLevel": "full",
          "matchedWords": Array [
            "react",
          ],
          "value": "Mocked excerpt",
        },
        "fields": Object {
          "slug": Object {
            "fullyHighlighted": false,
            "matchLevel": "full",
            "matchedWords": Array [
              "react",
            ],
            "value": "/platforms/javascript/<mark>react</mark>/",
          },
        },
        "section": Object {
          "matchLevel": "none",
          "matchedWords": Array [],
          "value": "Mocked section",
        },
        "title": Object {
          "fullyHighlighted": true,
          "matchLevel": "full",
          "matchedWords": Array [
            "react",
          ],
          "value": "<mark>React</mark>",
        },
      },
      "_snippetResult": Object {
        "body_safe": Object {
          "matchLevel": "full",
          "value": "Mocked body_safe",
        },
        "content": Object {
          "matchLevel": "full",
          "value": "MockedContent",
        },
        "excerpt": Object {
          "matchLevel": "full",
          "value": "Mocked excerpt",
        },
        "text": Object {
          "matchLevel": "full",
          "value": "Mocked text",
        },
      },
      "draft": false,
      "excerpt": "Mocked excerpt",
      "fields": Object {
        "slug": "/platforms/javascript/react/",
      },
      "objectID": "cd5528ad-935b-5a33-b25e-4f945638551b",
      "section": Object {
        "full_path": "Mocked full_path",
      },
      "title": "Mocked hit",
      "url": "/platforms/javascript/react/",
    },
    Object {
      "_highlightResult": Object {
        "excerpt": Object {
          "fullyHighlighted": false,
          "matchLevel": "full",
          "matchedWords": Array [
            "react",
          ],
          "value": "Mocked excerpt",
        },
        "fields": Object {
          "slug": Object {
            "fullyHighlighted": false,
            "matchLevel": "full",
            "matchedWords": Array [
              "react",
            ],
            "value": "/platforms/javascript/<mark>react</mark>/",
          },
        },
        "section": Object {
          "matchLevel": "none",
          "matchedWords": Array [],
          "value": "Mocked section",
        },
        "title": Object {
          "fullyHighlighted": true,
          "matchLevel": "full",
          "matchedWords": Array [
            "react",
          ],
          "value": "<mark>React</mark>",
        },
      },
      "_snippetResult": Object {
        "body_safe": Object {
          "matchLevel": "full",
          "value": "Mocked body_safe",
        },
        "content": Object {
          "matchLevel": "full",
          "value": "MockedContent",
        },
        "excerpt": Object {
          "matchLevel": "full",
          "value": "Mocked excerpt",
        },
        "text": Object {
          "matchLevel": "full",
          "value": "Mocked text",
        },
      },
      "anchor": "mocked-anchor",
      "draft": false,
      "excerpt": "Mocked excerpt",
      "fields": Object {
        "slug": "/platforms/javascript/react/",
      },
      "objectID": "cd5528ad-935b-5a33-b25e-4f945638551b",
      "section": Object {
        "full_path": "Mocked full_path",
      },
      "title": "Mocked hit",
      "url": "/platforms/javascript/react/",
    },
  ],
  "hitsPerPage": 20,
  "index": "sentry-blog-posts",
  "nbHits": 1,
  "nbPages": 1,
  "page": 0,
  "params": "query=react&snippetEllipsisText=%E2%80%A6&highlightPreTag=%3Cmark%3E&highlightPostTag=%3C%2Fmark%3E",
  "processingTimeMS": 13,
  "query": "react",
}
`;

exports[`Search can bias individual sites 1`] = `
Array [
  Array [
    Array [
      Object {
        "indexName": "sentry-docs",
        "params": Object {
          "highlightPostTag": "</mark>",
          "highlightPreTag": "<mark>",
          "optionalFilters": Array [
            Array [
              "platforms:sentry.javascript.react",
            ],
            "legacy:0",
          ],
          "snippetEllipsisText": "…",
        },
        "query": "react",
      },
    ],
  ],
]
`;

exports[`Search does not query platforms when none are provided 1`] = `
Array [
  Array [
    Array [
      Object {
        "indexName": "sentry-docs",
        "params": Object {
          "highlightPostTag": "</mark>",
          "highlightPreTag": "<mark>",
          "optionalFilters": Array [
            "legacy:0",
          ],
          "snippetEllipsisText": "…",
        },
        "query": "react",
      },
    ],
  ],
]
`;

exports[`Search prioritizes path over platform 1`] = `
Array [
  Array [
    Array [
      Object {
        "indexName": "sentry-docs",
        "params": Object {
          "highlightPostTag": "</mark>",
          "highlightPreTag": "<mark>",
          "optionalFilters": Array [
            Array [
              "platforms:sentry.javascript.react",
            ],
            "legacy:0",
          ],
          "snippetEllipsisText": "…",
        },
        "query": "react",
      },
    ],
  ],
]
`;

exports[`Search queries 1`] = `
Array [
  Object {
    "hits": Array [
      Object {
        "context": Object {
          "context1": "Platforms > JavaScript > React",
        },
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "sentry-docs",
        "site": "docs",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://docs.sentry.io/platforms/javascript/react/",
      },
      Object {
        "context": Object {
          "context1": "Platforms > JavaScript > React",
        },
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "sentry-docs",
        "site": "docs",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://docs.sentry.io/platforms/javascript/react/",
      },
    ],
    "name": "Documentation",
    "site": "docs",
  },
]
`;

exports[`Search queries multiple indexes 1`] = `
Array [
  Object {
    "hits": Array [
      Object {
        "context": Object {
          "context1": "Platforms > JavaScript > React",
        },
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "sentry-docs",
        "site": "docs",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://docs.sentry.io/platforms/javascript/react/",
      },
      Object {
        "context": Object {
          "context1": "Platforms > JavaScript > React",
        },
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "sentry-docs",
        "site": "docs",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://docs.sentry.io/platforms/javascript/react/",
      },
    ],
    "name": "Documentation",
    "site": "docs",
  },
  Object {
    "hits": Array [
      Object {
        "context": Object {
          "context1": "Platforms > JavaScript > React",
        },
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "develop-docs",
        "site": "develop",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://develop.sentry.dev/platforms/javascript/react/",
      },
      Object {
        "context": Object {
          "context1": "Platforms > JavaScript > React",
        },
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "develop-docs",
        "site": "develop",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://develop.sentry.dev/platforms/javascript/react/",
      },
    ],
    "name": "Developer Documentation",
    "site": "develop",
  },
  Object {
    "hits": Array [
      Object {
        "context": Object {
          "context1": "Mocked hit",
        },
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "sentry-blog-posts",
        "site": "blog",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://blog.sentry.io/platforms/javascript/react/",
      },
      Object {
        "context": Object {
          "context1": "Mocked hit",
        },
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "sentry-blog-posts",
        "site": "blog",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://blog.sentry.io/platforms/javascript/react/#mocked-anchor",
      },
    ],
    "name": "Blog Posts",
    "site": "blog",
  },
  Object {
    "hits": Array [
      Object {
        "context": Object {},
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "sentry-help",
        "site": "blog",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://help.sentry.io/platforms/javascript/react/",
      },
      Object {
        "context": Object {},
        "id": "cd5528ad-935b-5a33-b25e-4f945638551b",
        "index": "sentry-help",
        "site": "blog",
        "text": "Mocked text",
        "title": "Mocked section",
        "url": "https://help.sentry.io/platforms/javascript/react/#mocked-anchor",
      },
    ],
    "name": "Help Center",
    "site": "help-center",
  },
]
`;

exports[`Search queries with path as priority 1`] = `
Array [
  Array [
    Array [
      Object {
        "indexName": "sentry-docs",
        "params": Object {
          "highlightPostTag": "</mark>",
          "highlightPreTag": "<mark>",
          "optionalFilters": Array [
            "legacy:0",
          ],
          "snippetEllipsisText": "…",
        },
        "query": "react",
      },
    ],
  ],
]
`;

exports[`Search queries with platform priority 1`] = `
Array [
  Array [
    Array [
      Object {
        "indexName": "sentry-docs",
        "params": Object {
          "highlightPostTag": "</mark>",
          "highlightPreTag": "<mark>",
          "optionalFilters": Array [
            Array [
              "platforms:sentry.javascript.react",
            ],
            "legacy:0",
          ],
          "snippetEllipsisText": "…",
        },
        "query": "react",
      },
    ],
  ],
]
`;

exports[`Search rejects unknown sites 1`] = `"SentryGlobalSearchError: unknown site \\"foobar\\" in config.include"`;

exports[`Search requires configuration 1`] = `"SentryGlobalSearchError: SentryGlobalSearch must be initialized with an array that includes one or more of: docs, develop, help-center, blog."`;

exports[`Search requires configuration as array 1`] = `"SentryGlobalSearchError: SentryGlobalSearch must be initialized with an array that includes one or more of: docs, develop, help-center, blog."`;
